revamped image analysis pipeline

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -164,7 +164,7 @@
     </div>
 
 	    <!-- Scripts -->
-	<script type="module" src="{{ url_for('static', filename='js/analyze.js') }}"></script>
+	<script type="module" src="{{ url_for('static', filename='js/analyze_image.js') }}"></script>
 	<script type="module" src="{{ url_for('static', filename='js/timelapse.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/routing.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/utils.js') }}"></script>
